# book_approaching_almost_any_ml_problem

./: README.md  pyproject.toml
approaching_text_classification/: bert.py  clean_text.py  ensembling.py  fasttext.py  lstm.py
cross_validation/: stratified_kfold_for_regression.py
ensembling_and_stacking/: optimize_auc.py
