[tool.poetry]
name = "book_approaching_almost_any_ml_problem"
version = "0.1.0"
description = ""
authors = ["hakubishin3 <hansaku187@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
sklearn = "^0.0"
numpy = "^1.19.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
